GPencil: Clone brush don't copy all layers #67904

Closed
opened 2019-07-29 21:46:34 +02:00 by mobin · 4 comments

System Information
Operating system:windows 10
Graphics card:msi gtx 1050ti

Blender Version
Broken: Blender 2.80 Release Candidate 3
Worked: (optional)

Short description of error
Clone, works well for the first copy

But for the second copy, stroke turns it into fill!

And I'm having trouble drawing a circle with the Circle tool because it has to guess its size when drawing
Exact steps for others to reproduce the error

Draw a circle with a stroke and select it in the Sculpt Mode section and then click Clone then you will find that the first copy is correct but the second copy is Fill

**System Information** Operating system:windows 10 Graphics card:msi gtx 1050ti **Blender Version** Broken: Blender 2.80 Release Candidate 3 Worked: (optional) **Short description of error** Clone, works well for the first copy ``` But for the second copy, stroke turns it into fill! ``` And I'm having trouble drawing a circle with the Circle tool because it has to guess its size when drawing **Exact steps for others to reproduce the error** Draw a circle with a stroke and select it in the Sculpt Mode section and then click Clone then you will find that the first copy is correct but the second copy is Fill
Author

Added subscriber: @Mobin.artworks

Added subscriber: @Mobin.artworks
Antonio Vazquez self-assigned this 2019-07-29 22:32:37 +02:00
Antonio Vazquez changed title from Clone in Sculpt mode to GPencil: Clone brush don't copy all layers 2019-07-29 22:33:11 +02:00

This is a limitation now... The problem is the first copy is using all layers, but the next clones only uses the active one.

This is a limitation now... The problem is the first copy is using all layers, but the next clones only uses the active one.

This issue was referenced by 406e960327

This issue was referenced by 406e960327191b548f736382571ed55cff91bc2c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67904
No description provided.